fix: use scan.targetFileName as part of issue id

--- a/src/main/resources/resources/en.properties
+++ b/src/main/resources/resources/en.properties
@@ -10,5 +10,5 @@ publicationTime=Publication Time
 from=Through
 isUpgradable=Is Upgradable
 isPatchable=Is Patchable
-filename=Filename
+targetFile=Target File
 issueUrl=More Info on snyk.io
